trunk/Archive2/b0/8cce2037200cc7/output
main.cpp:7:2: error: expected ';' after struct
}
 ^
 ;
main.cpp:4:1: error: anonymous structs and classes must be class members
struct 
^
main.cpp:10:4: error: use of undeclared identifier 'proto'
   proto::display_expr(cout << map_list_of(1,2)(2,3)(3,4)(4,5)(5,6));
   ^
main.cpp:10:24: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
   proto::display_expr(cout << map_list_of(1,2)(2,3)(3,4)(4,5)(5,6));
                       ^~~~
                       std::cout
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
main.cpp:10:32: error: use of undeclared identifier 'map_list_of'
   proto::display_expr(cout << map_list_of(1,2)(2,3)(3,4)(4,5)(5,6));
                               ^
5 errors generated.
